force-app/main/default/objects/HRAdmin_PaymentRequest__c/HRAdmin_PaymentRequest__c.object-meta.xml
<CustomObject>
    <label>HRAdmin Payment Request</label>
    <nameField>
        <displayFormat>HRPR-{0000000}</displayFormat>
        <label>HRAdmin Payment Request ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>HRAdmin Payment Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>