force-app/main/default/objects/HRAdmin_PaymentRequest__c/fields/Content_Type__c.field-meta.xml
<CustomField>
    <fullName>Content_Type__c</fullName>
    <label>Content Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Training Request</fullName>
            </value>
            <value>
                <fullName>Employee Process</fullName>
            </value>
            <value>
                <fullName>Business Travel Request</fullName>
            </value>
            <value>
                <fullName>Purchase Order</fullName>
            </value>
            <value>
                <fullName>Salary Advance Request</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>