force-app/main/default/objects/HRAdmin_PaymentRequest__c/fields/EmployeeName__c.field-meta.xml
<CustomField>
    <fullName>EmployeeName__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Employee Name</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipName>HR_Payment_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>