force-app/main/default/objects/HRAdmin_PaymentRequest__c/fields/Payment_Approver_User__c.field-meta.xml
<CustomField>
    <fullName>Payment_Approver_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payment Approver (User)</label>
    <referenceTo>User</referenceTo>
    <relationshipName>HRAdmin_Payment_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>