force-app/main/default/objects/HRAdmin_PaymentRequest__c/fields/PaymentMethod__c.field-meta.xml
<CustomField>
    <fullName>PaymentMethod__c</fullName>
    <label>Payment Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cash</fullName>
            </value>
            <value>
                <fullName>Bank transfer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>