force-app/main/default/objects/HRAdmin_PaymentRequest__c/fields/Today_Formula__c.field-meta.xml
<CustomField>
    <fullName>Today_Formula__c</fullName>
    <description>Use for flow</description>
    <formula>Today()</formula>
    <label>Today Formula</label>
    <type>Date</type>
</CustomField>