force-app/main/default/objects/HRAdmin_PaymentRequest__c/fields/Today_True__c.field-meta.xml
<CustomField>
    <fullName>Today_True__c</fullName>
    <description>use for flow</description>
    <formula>TODAY() =  Payment_Date__c</formula>
    <label>Today = True</label>
    <type>Checkbox</type>
</CustomField>