force-app/main/default/objects/HRAdmin_PaymentRequest__c/fields/Total_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount__c</fullName>
    <label>Total Amount</label>
    <summarizedField>HRAdmin_Payment_Request_line__c.Amount__c</summarizedField>
    <summaryForeignKey>HRAdmin_Payment_Request_line__c.HRAdmin_Payment_Request__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>