force-app/main/default/objects/HRAdmin_PaymentRequest__c/recordTypes/CashAdvance.recordType-meta.xml
<RecordType>
    <fullName>CashAdvance</fullName>
    <active>true</active>
    <label>Cash Advance</label>
</RecordType>